Update some new files.

--- a/2-技术与商业案例/8-亚马逊领导力准则.md
+++ b/2-技术与商业案例/8-亚马逊领导力准则.md
@@ -379,6 +379,266 @@
 
 
 
+# 亚马逊领导力准则之选贤育能
+
+用亚马逊创始人贝佐斯自己的话形容，亚马逊领导力准则是这家公司取得如此辉煌成就的基石。认真学习这些领导力准则，不但有助于理解亚马逊的企业文化，也可以帮助我们分析亚马逊如何取得了这样举世瞩目的成就。
+
+今天这条亚马逊领导力准则值得我们仔细分析和研究，它就是“选贤育能”，其中文官网解释为：
+
+> 领导者不断提升招聘和晋升员工的标准。他们表彰杰出的人才，并乐于在组织中通过轮岗磨砺他们。领导者培养领导人才，他们严肃地对待自己育才树人的职责。领导者从员工角度出发，创建职业发展机制。
+
+亚马逊的招聘原则和很多公司不太一样。贝佐斯认为，新员工的加入应该有助于提高亚马逊员工的整体素质，新员工的水平需要高于整体员工的平均水平，只有这样亚马逊的员工素质才会越来越高。
+
+贝佐斯在接受采访时曾经说过，那些上一年加入亚马逊的人应该为自己感到庆幸。因为如果晚一点来面试，他们很可能无法加入亚马逊。
+
+简单来说，亚马逊招聘的都应该是最杰出的人才，这一点体现了这项领导力准则的核心思想。在亚马逊，一个员工只有是真正优秀的人才，才能在各岗位的轮岗中生存并且更好地发展。
+
+亚马逊领导的职责是把这种“选拔天才”的思想，贯彻到每个方面，为优秀的人才创造最合理的职业发展途径。相反，那些并不优秀的人才，又无法在整体环境中得到提升的，随着亚马逊整体素质的渐渐提高，只能被淘汰。
+
+亚马逊最初进行招聘的时候，贝佐斯严格审查了每一个被雇用的员工，他自己来拍板，来做是否聘用的决定。随着公司规模的扩张，这种办法变得不切实际。但是，贝佐斯在无法亲力亲为的时候想出了一个办法，他找到一群和他保持同样观念的人，然后让这些人按照他的标准参与面试做好把关。这就是亚马逊面试里面特别有特色的 Bar Raiser。
+
+这种做法，无形中拔高了面试的难度。在亚马逊的面试过程中，这些代表了创始人的面试官有很大的权限，包括可以一票否决整个面试结果。而且他们参与的面试，代表的是整个公司，他们并不对某个特定的组负责，只对公司负责。
+
+这种做法的主要优点在于，这群人在客观上保证了面试选拔的是最优秀的人才。当然这种选拔并不是没有代价，有时甚至还很严重。比如说因为这种选拨机制，一个人有特定的专长，但综合素质不是太高，很有可能就无法进入亚马逊。因此，如果一个特定的组需要有技术专长的人，很快就会陷入有人却招不进来的状态。
+
+Bar Raiser 既然有这么重要的权力，要想成为一个 Bar Raiser 自然是非常不易的事情。不管是不是经理，他必须是各方面都非常优秀，并已在公司里面工作多年。除此之外，他需要充分理解创始人的选人标准，能够严格执行公司的招聘原则。所以在亚马逊，如果一个人可以成为一个 Bar Raiser，是一种很大的荣誉。
+
+Bar Raiser 的一票否决制度，也决定了很多时候 Bar Raiser 会和招人的经理产生冲突，这就非常考验这个人是不是能够在压力面前真正代表公司，为公司招聘到合适的人选。
+
+我认识很多亚马逊的人，包括在亚马逊里面做经理和总监的人，他们都抱怨过这条制度带来的弊端：招人不容易。在亚马逊，如果一个组刚成立，这时招人是相对容易的。因为很容易招到高于组内平均水平的员工。
+
+但如果是一个在亚马逊已存在多年的工作组，组内本身已有了很多水平很高的人。在此基础上，要招聘一名高于平均水平的新员工，符合条件的候选人不会很多，而在这些本就不多的人里，通过层层筛选并且成功加入的，这个比例就更少。
+
+在这种情况下，招人的经理如果严格按标准去做，就会面临无人可招的尴尬局面。而如果不严格执行标准，又违背了这条重要的领导力准则。
+
+当然，“上有政策，下有对策”。有的领导者把平均水平的考量放到更大的环境下评价。如果说原来是在小组内测评，现在就直接讨论这个人进来对大组的平均水平的影响。所以实际上的问题是，在亚马逊里那些成名的大组，人才济济的，招人对于领导者的挑战非常大。这无疑是这条领导力准则带给领导者的烦恼。
+
+那么这个制度是否执行得一切顺利呢？如果果真如此，那么现在亚马逊必然网罗到了世界上最优秀的人才，员工的平均水平与日俱增。
+
+然而，实际情况却是，大家对亚马逊的评价更多集中在领导层面的战略眼光和执行力上；而一旦我们将目光聚焦到普通员工这一层面，大家通常都会认为谷歌、Facebook 的基层人员在素质上要强于亚马逊。这又是为什么呢？
+
+贝佐斯百密一疏，他没有考虑到优秀人才是会离开的，业务的扩张需要更多的新人补充进来。那么在这一走一留之间，是不是会产生一些问题呢？答案是肯定的。
+
+因为亚马逊的领导力准则要求，不但要选拔最优秀的员工，而且这些最优秀的员工被招聘进来之后，在内部还需要面临非常严苛和高标准的竞争和培训。
+
+我们可以想象，作为一个刚从学校毕业，初入职场的人来说，有很多的东西要学。这个时候直接被投入到高标准严要求的环境里，对很多人来说挑战过于巨大。因此进入亚马逊的人，在进去的前 18 个月离开的比例相当高，而且这个比例比全美国大部分互联网企业都高。
+
+然而占据亚马逊底层员工主力的，很多就是这样一些入职不到 18 个月的员工。整体来说，这个标准不一定适用于衡量基层员工的质量，因为亚马逊里面一些有经验的人离职了，这导致整体队伍的质量自动下降了。招到高于平均水平的新员工，也不能弥补更为有经验更为优秀的老员工流失带来的问题。
+
+不过，如果我们把这条标准提高一些，去衡量那些在亚马逊工作多年以上的，或者说级别较高的人的素质，会发现亚马逊的中高层领导鲜有庸才，更不用说是尸位素餐的人了。
+
+中高层领导者素质高的原因是，亚马逊业务扩张非常迅猛，每天都有新的挑战出现，这就促使了新职位的产生。所以那些优秀的员工很大程度上被公司内部消化，在其中磨砺得更为出色，从而成为杰出的中高层领导者。而且相对于基层的流动性，亚马逊的中高层领导者的流动性就不是那么大了。
+
+亚马逊领导力准则之选贤育能就介绍到这里。贝佐斯对于亚马逊员工的要求是每招进来一个新员工，都要在公司已有员工的平均水平之上。早年贝佐斯亲自参与招聘，后来公司也通过 Bar Raiser 来代表贝佐斯来完成亚马逊的招聘。
+
+应该说这个领导力准则的初衷是非常好的，但是实际执行的时候则喜忧参半。一方面是这条严苛的制度会导致中低层的员工无人可招，所以就导致上有政策下有对策。另外一方面，人员会流失，优秀的人流失以后，这条制度并不能有效地保证员工素质不下降。
+
+但是我们可以发现，主要的问题出在中低层的员工上，亚马逊的中高层领导者的素质的确是相当高的。亲爱的读者，如果你借鉴这条领导力准则招人的话，有哪些方面是你会吸取的，哪些方面是你觉得需要改变的呢？
+
+
+
+
+
+# 亚马逊领导力准则之最高标准
+
+用亚马逊创始人贝佐斯自己的话形容，亚马逊领导力准则是这家公司取得如此辉煌成就的基石。认真学习这些领导力准则，不但有助于理解亚马逊的企业文化，也可以帮助我们分析亚马逊如何取得了这样举世瞩目的成就。
+
+今天我要说的一条亚马逊领导力准则是“最高标准”，是一条与之前提及的“选贤育能”有联系的领导力准则。其中文官网解释为：
+
+> **最高标准**
+
+> 领导者有着近乎严苛的高标准 — 这些标准在很多人看来可能高得不可理喻。领导者不断提高标准，激励自己的团队提供优质产品、服务和流程。领导者会确保任何问题不会蔓延，及时彻底解决问题并确保问题不再出现。
+
+这条标准从字面上理解，有两个要点：
+
+1. 领导者要有近乎严苛的高标准，并不断提高标准；
+2. 领导人要确保问题不蔓延，及时解决而且使之不会再现。
+
+关于什么是“高标准”，贝佐斯给了我们一个评判的基准：这条标准需要在大多数人看来高得不可理喻。
+
+既然对于大部分人来说，这种标准高得不可理喻，那么普通人肯定不是那么容易达到的。上次讲到，亚马逊就是要选拔最优秀的人才来为己所用，其实这两者是相呼应的：如果没有最优秀的人，也就无法实现最高标准。
+
+此外，这条领导力准则更要求领导者不断提高这个本来就高到离谱的标准，因为更严苛的标准可以敦促团队为客户提供更优秀的产品、服务和流程。
+
+在常人看来不可理喻的高标准之上继续推进，这对领导者和团队成员无疑都是巨大的挑战。虽然我们常说“天外有天 "，但也必须承认：人力有穷尽。尽管如此，对高标准的推进依然不可或缺，因为这与人才的选拔、培训以及淘汰机制都密切相关。
+
+当我第一次读到这个领导力准则时，确实是一种非常严苛的感觉，这需要是一群多么优秀的人才能满足这条领导力准则啊。
+
+因此，起初我对亚马逊能不能够真正实施这条准则也是感到十分好奇。但亚马逊的市值在过去十年间翻了十倍有余，我想亚马逊在坚持最高标准这条准则上也是卓有成效吧。或许，正是因为亚马逊坚持了最高标准，所以才发展得越来越迅猛。
+
+而这条领导力准则，或许也可以解释亚马逊基层员工流动率很高的问题。贝佐斯在接受采访时多次提到，他并不在乎亚马逊的高离职率。他认为，只有那些符合公司价值观、自身非常优秀，且能不断提高自己以跟上公司发展节奏的人，才能够长期留在亚马逊；那些因为各类原因无法跟上公司发展节奏的人，在公司的发展过程中被淘汰，其实也是正常的事儿。
+
+在贝佐斯看来，一个公司要壮大，就需要用到在大部分人看来无法理喻的严苛标准，并在这样的标准上持续提高，以保证公司的持续发展。更新血液，保持进步，这或许就是亚马逊发展势头迅猛的一个原因。
+
+这条领导力准则的第二部分，专门针对遇到的问题进行了阐述，是很明确的“三步走”程序：领导者要确保问题不会蔓延，要及时解决问题，要确保问题不会再现。我觉得，这种方法非常高明。
+
+- **在问题发生之初，及时控制问题，使之不蔓延是非常关键的一步。**如果我们对于云计算和互联网服务有实践经验的话，但凡出现问题，第一步都是先止血，而不是先追究问题的根源。这种原则同样适用于公司管理，概括来说就是：有问题，先止血，确保问题不蔓延。
+
+- **保证问题不蔓延的基础是解决问题。**解决问题的方式五花八门，然而都离不开对问题的快速定位和反应。之所以这部分内容会出现在这项准则里，我的理解是问题的出现和解决，与标准的执行密切相关。越是严苛的标准就越容易避免问题；而问题出现以后能否迅速反馈，也体现了是不是有一套严苛的标准和成熟的问题解决方案存在。
+
+    然而我们都知道，当问题出现，尤其是复杂问题出现的时候，无论是控制它，还是迅速解决它，其实都是非常有挑战的事情。此时，标准和流程很大程度上决定了能否有效并迅速地诊断出问题在哪、如何解决。这种先控制问题，再解决问题的步骤，非常具有指导意义。
+
+- **最后一部分，是确保问题不会再现。**如何才能保证问题不再出现？这需要深入分析、了解问题，获知出现问题的原因和内外部条件，找到制度上的疏漏、程序上的缺失，等等。这点其实和“决策正确”这条领导力准则密切相关，有异曲同工之妙。为什么这么说呢？
+
+    “决策正确”是说在亚马逊，领导者可以偶尔错，但不能一直错，他们需要从一次错误里面吸取教训。没有人可以屏蔽问题，然而一个问题出现一次以后，亚马逊的领导者就应该有能力杜绝再发生同类问题。
+
+亚马逊的高标准体现在很多方面。举个例子，亚马逊 AWS 的存储服务 S3 在高标准的要求下，故障率比我们自己买一块磁盘存数据出故障的几率还要低。所以久而久之，用户默认 S3 是一个“永远都不会坏的东西”，根本不需要担心 S3 坏掉了应该怎么办的问题。
+
+要在数目庞大的用户群中建立起“无故障”的印象，这意味着亚马逊要坚持十年如一日执行严格的标准，达到这一点可是相当不易。
+
+但是很遗憾，亚马逊的 S3 在保持多年不坏的纪录后，终于还是出现了一次大面积的事故。一个程序员本来想关停一部分机器的服务，但是却关停了所有的服务。这次人为事故导致很多网站都无法访问。人们突然才意识到：原来 S3 也是可能出错的，原来“S3 永远稳定”是潜移默化中形成的印象而已，他们在直觉上都把不可思议的事情当成了理所应当。这次事故让大家从这个状态里清醒过来。
+
+然而正是因为这样，我才真正意识到，亚马逊在十余年如一日地稳定运行 S3 这个服务。这个在大部分人看来不可思议的事情亚马逊做到了。
+
+按照亚马逊的这条领导力准则，S3 这种问题出现一次以后，领导者就要采取措施避免同类问题再次发生。尽管我们还需要更多事实，来证明这条领导力准则真的被严格贯彻了，但我本人对此非常有信心。
+
+
+
+
+
+
+
+
+
+
+
+# 亚马逊领导力准则之创新简化
+
+用亚马逊创始人贝佐斯自己的话形容，亚马逊领导力准则是这家公司取得如此辉煌成就的基石。认真学习这些领导力准则，不但有助于理解亚马逊的企业文化，而且可以帮助我们分析亚马逊如何取得了这样举世瞩目的成就。
+
+今天我要说的一条亚马逊领导力准则是“创新简化”，其中文官网解释为：
+
+> 领导者期望并要求自己的团队进行创新和发明，并始终寻求使工作简化的方法。他们了解外界动态，四处寻找新的创意，并且不局限于“非我发明”的观念。当我们开展新事物时，我们要接受被长期误解的可能。
+
+这条领导力准则主要由“创新”与“简化”两部分组成。具体来说，我们可以分解成下面几点：
+
+1. 简化和创新是密不可分的；
+2. 创新的时候不要受到局限；
+3. 创新要接受长期被误解。
+
+**在贝佐斯看来，创新的重要一步就是简化。假如创新产生了一个复杂的结果，这在创新刚起步时是被允许的；但如果在这种复杂的结果上停滞不前，就不是亚马逊所寻求的创新。**
+
+某位亚马逊前高管接受访谈时提到过这样一件事。在亚马逊网站成立初期，公司内部就如何为客户提供服务展开了讨论，讨论的主题是：亚马逊是否需要像传统零售商那样构建庞大的客服队伍？
+
+公司内部觉得这种庞大的客服队伍不但消耗资源，而且不利于客户真正解决问题，所以亚马逊不构建庞大的客服队伍。亚马逊的创新理念是尽可能让一切自动化，从而达成简化工作的目的。
+
+这种自动化体现在很多方面，比如在亚马逊的退货流程不需要客服参与，再比如在亚马逊上可以自动追踪货物的定位。这在今天的电商环境下司空见惯，但在亚马逊刚成立时绝对不是整个业界的主流解决方案。
+
+这种方案的好处显而易见。
+
+- 首先，不需要客服，就降低了成本，亚马逊可以提供更加低廉的价格。
+- 其次，不需要客服，就没有了所谓的瓶颈，用户需要进行各种操作时，就不会因为联系客服而等待耽搁时间。因此，整个网站的吞吐量上升，亚马逊可以更好地服务客户。
+
+**贝佐斯认为，不断简化，创造出更加简单的问题解决方式，才是创新的根本**。任何创新，倘若无法让事情变得更简单、更自动化，就难免进入“为了创新而创新”的僵局。
+
+这个观点其实非常值得深思。在创新或者强调创新的过程里，如何去判断创造出来的新事物是合理的？如果没有一些基本准则，难免陷入各执一词的状态。以“简化”作为创新的基本准则，是一个很有指导意义的做法。
+
+亚马逊创新简化准则的另一部分，是要求员工可以做任何尝试，不局限于亚马逊内部的创意：任何好的想法，不论出处如何，只要它有益于亚马逊的发展，都可以拿来使用和尝试。这和微软的作风很不一样。
+
+亚马逊的一位朋友告诉我，他从微软去亚马逊之后，明显感觉到了两家公司的很多差异。其中非常重要的一项是，当他尝试做一些创新的时候，在微软往往阻力重重，领导会问你这个创新是怎么来的，是不是符合微软的传统等等，在尝试之前他需要再三准备。
+
+在亚马逊，这些从来不是问题。亚马逊鼓励创新、鼓励尝试，至于想法是外来的，还是内部诞生的，都不应该是阻止创新和尝试的理由。亚马逊的领导者鼓励每个人去创新，而且不愿创新是不符合领导力准则的行为，亚马逊并不喜欢这样的员工，也不鼓励这样的行为。
+
+**这条领导力准则还强调了一点：但凡是创新的东西，都可能在一段时间，乃至很长一段时间内无法让人理解。**亚马逊认为这其实是很正常的，而且他们鼓励员工接受这种无法被外界理解的情况，并继续创新。
+
+这种做法的好处是，亚马逊的员工可以不用局限在眼前的利益，能够做一些更加长远的、有变革性的创新。很多成功的创新不是小修小补，而是颠覆性的、变革性的，历史也告诉我们，很多时候“真理掌握在少数人手中”。如果说因为大众不能理解就停止创新，也就不会有颠覆性的变革出现了。
+
+我曾经读过一篇亚马逊前高管写的文章，其中提到了亚马逊第一次从在线售书转向在线售卖家电的过程。在那个年代，只有大卖场里才能售出家电，因为每个人需要去现场触摸操作才愿意掏钱，毕竟家电和书比起来是一大笔消费。
+
+那么在网上仅仅凭借几张图片和列表，能卖成家电吗？亚马逊内部的很多人心里都有这个疑问，这在二十年前也是很正常的反应。
+
+亚马逊还是决定做了，不过在很长一段时间里，这种做法并没有客户买账。因为商品看不到也摸不到就寄到家里，客户总是有很多不安全感。家电生意在最初表现非常不好。
+
+**然而贝佐斯觉得，这其实是因为客户不理解创新。而创新，尤其是大的创新，一段时间内不被接受也是正常的。但如果因此就停止创新了，那才是真正的问题。**
+
+面对家电生意不成功一事，贝佐斯对他的队伍说，我们需要继续创新。
+
+- 首先，亚马逊专门对原本卖书的网站做了很多改动，包括在网站上提供从各个角度拍摄的高精度图片。
+- 其次，亚马逊构建了非常完备的货物追踪查询系统，让用户可以轻松查阅所购货物的位置。
+- 再次，亚马逊强化了退货体系，使网购产品和在店里买东西一样可以方便地退货。用户只要通过网上的服务，自助的生成包含运费的单据，就可以直接去邮局或者快递公司退货了，全程无需打客服电话，无需和亚马逊进行人工交流。
+
+久而久之，人们也渐渐发现了在线购买家电的好处：可以足不出户，而且物美价廉。亚马逊的家电售卖业务也就这样做了起来，而网购家电今天也早已不是一个让人存疑的问题了。但在亚马逊网上销售家电的整个过程里，我们可以明确地看到：他人对创新会存在误解，接受误解才能真正推动创新。
+
+“简化创新”这条领导力准则就说到这里。亲爱的读者，你怎么看待创新和简化之间的关系呢？如果创新长期被人误解，你又能坚持下去吗？
+
+
+
+
+
+# 亚马逊领导力准则之崇尚行动
+
+用亚马逊创始人贝佐斯自己的话形容，亚马逊领导力准则是这家公司取得如此辉煌成就的基石。认真学习这些领导力准则，不但有助于理解亚马逊的企业文化，也可以帮助我们分析亚马逊如何取得了这样举世瞩目的成就。
+
+今天我要说的一条亚马逊领导力准则是“崇尚行动”，其中文官网解释为：
+
+> 速度对业务影响至关重要。很多决策和行动都可以改变，因此不需要进行过于广泛的推敲。我们提倡在深思熟虑前提下进行冒险。
+
+贝佐斯认为对于业务来说，速度至关重要。有很多行动和决定，如果觉得是错的，在将来都是可以更改的。如果我们花费很多时间去研究、学习，可能因此耽误速度。而且很可能这一耽误，情况就发生了变化，让竞争对手跑在我们的前面，从而错失良机。所以经过适当考虑后，我们应该尽快采取行动，哪怕这些行动存有风险。
+
+对于这条领导力准则，我们应该分三部分来看。
+
+1. 速度对于业务的影响非常非常重要。很多时候业务错失良机，主要就是因为没有采取合适的速度。
+2. 决定和行为都是可以改变的，只要行动足够快，就可以足够灵活。不要担心犯错，足够快了之后，犯了错也是可以迅速纠正的。
+3. 冒险很有必要，尤其是在深思熟虑之后。在风险可控的情况下，冒险是非常有必要的。
+
+我们先看第一部分。我和亚马逊的朋友交流时得知，在亚马逊一个提案通常不会被反复讨论。哪怕这个提案还不明朗，大家甚至不知道最佳的执行方案，如果经过几轮论证，大家对比了风险和收益，觉得值得尝试，就会立刻转入执行阶段。
+
+**贝佐斯的名言是：速度就是一切。** 能够迅速执行，本身就是成功的一个关键。
+
+不可否认，现实中一些公司确实是在关键时刻通过深思熟虑来获得成功的，速度本身反而不是最重要的。但在互联网企业和电商的背景下，这种理念就容易理解了。
+
+“反应迅速敏捷”有时正是特定行业成功的要义。互联网行业以前所未有的速度发展，任何新事物的出现到成熟，往往都远远快过传统行业。这条领导力准则首先就关注“速度”，因为**一个企业能够迅速反应并行动，才是在互联网时代屡战屡胜的不二法门。**
+
+从这一点来说，我们必须承认贝佐斯领会到了互联网企业的精髓，并使其在亚马逊中传承。
+
+亚马逊是一家非常崇尚实际行动的公司。在亚马逊里，“做出行动”重要无比，速度就是一切。所以一个方案能不能迅速从模拟讨论推进到具体实施，也是对亚马逊员工能力的一个衡量标准。
+
+再来看第二部分，它是说在速度足够快的情况下，决策或者行动出现了错误可以纠正。只有执行了，你才能知道决策是正确的还是错误的，一开始讨论很多，也许并没有意义。**具体来说，让市场告诉自己是不是犯错了，然后去纠正，是这条领导力准则很重要的组成部分。**
+
+我们放到整个互联网的大环境下来看。亚马逊作为一个互联网公司，其公布出来的产品的失败率非常低，而微软或者谷歌的产品失败率则明显高出一截儿。这是不是说迅速行动了，反而降低了错误呢？其实不是。
+
+如果和亚马逊里面的人聊天就会知道，亚马逊会很快进入实施阶段，并在小范围内进行尝试。这种小范围的客户可能是内部的其他组，也可能是外部客户，而尝试的主要目的是迅速否定掉没有意义的错误想法和实现。我们看到亚马逊出来的产品成功率很高，其实是因为很多产品在实施阶段后就迅速夭折在内部了。
+
+**这种大量尝试，大量失败，然后纠正决策，继续前进的风格，是非常典型的亚马逊风格。** 外面看见的失败率低，是以内部的大量失败为代价的。
+
+然而我们应该清楚地认识到一点，一个产品迅速实施失败调整的成本，往往低于将一个产品反复论证后再拿出来，却发现重大缺陷的情况。所以从某种程度上来说，一个崇尚通过行动去证明对错，并能迅速接受反馈、调整行动的企业，本身是非常可怕的。
+
+而这条领导力准则告诉我们，决策本身的正确性不是无比重要，我们应该提高速度多做尝试，要适当地减少论证。
+
+第三部分同样值得深思，通俗点说就是：亚马逊鼓励冒险，但前提是心里有数。
+
+这在某种程度上和“决策正确”这条领导力准则遥相呼应：犯错误是可以的，但是持续犯错误是不行的。领导者需要在大部分情况下保持决策正确。
+
+换句话说，**如果可以管理好风险，亚马逊鼓励冒险。**
+
+但是如何做到“管理好风险”呢？这既需要审视其他领导力准则的指导和对领导者的要求，又要深刻理解这条领导力准则里“行动比讨论更有意义”这一要义。
+
+“风险管理”是每个领导者都需要思考的问题。亚马逊既然提倡行动力，那么在执行过程中如何能够迅速判断行动正确与否，并及时去纠正，其实又对领导者的其他能力提出了挑战。
+
+**我想，如何平衡“崇尚行动”和“思考的深度与广度”之间的关系，这是一个很大的挑战。**
+
+亚马逊领导力准则并不否定领导者的思维深度和广度，也未否定对决策能力的严格要求，而且明确表示任何决策都可能出错，所以无休止地讨论思索，还不如早点采取行动更为实际。
+
+这些不同的要求放在一起，对于一个领导者的挑战是非常巨大的。能够做到这些的人，实可谓是领导者里面的精英了。
+
+我经常想，如果这么多的要求加诸于我身上，我能做好吗？很难。人和人终究是不同的，每个人擅长的领域不尽相同，总有人更擅长严谨的思维，有人则能够从快速试错里面学习成长。
+
+所以当你看待领导力准则的时候，不仅要理解亚马逊准则要求领导者如何去工作，更应该明白这个领导力准则其实更像是一个工具，用于筛选出贝佐斯需要的人才。
+
+与其他领导力准则一样，“崇尚行动”这条准则罗列了亚马逊要的是什么，却没有说如何才能够做到。所以，我们需要结合自身的优缺点，以及已经学习的其他亚马逊领导力准则，去好好思考这样一个问题：亚马逊在找的到底是具备何种综合素质的一类人，这些人被亚马逊招进去以后，又会诞生什么样的企业呢？
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
