Update some new files.

--- a/2-技术与商业案例/31-办公软件的战斗.md
+++ b/2-技术与商业案例/31-办公软件的战斗.md
@@ -485,6 +485,105 @@ Ribbon 的推出，给 Office 制造了一个非常大的热点。这是微软 O
 
 
 
+# 办公软件的新时代：微软和谷歌的战斗
+
+屡败屡战的微软通过“红狮会战”取得了电子表格战争的胜利，莲花公司则另辟新市场，通过推出企业协作系统 Lotus Notes 领先时代多年。然而，时运不济的莲花公司在开发出这一“神器”之后，却遭到了 IBM 的恶意收购，“神器”也渐渐毁在 IBM 手中。
+
+从历史上看，硅谷无疑是整个计算机发展的中心。只有 2000 年前后因为微软的崛起，让西雅图领先了几年。而微软成为整个软件业的霸主时，自然遭到了硅谷公司的抵抗。
+
+谷歌作为互联网时代成长起来的第一家公司，也是迄今为止最重要的公司之一，其地位不言而喻。偏偏谷歌也有一个办公软件梦，毕竟这市场巨大，只要能入场，肯定有饭吃。
+
+然而想要在这一市场掘金着实不易，一家家公司在这一战场上崛起又没落，无不证明了屡败屡战并最终奠定帝国地位的微软，是怎样一个实力强悍、久经沙场的“老司机”。进入“老司机”微软的帝国范围，一定非常危险。
+
+**谷歌决定通过一系列收购，完成在办公领域的出击。** 2006 年，它收购网络字处理软件厂商 UPStartle，同年又买下在线电子表格制作公司 2Web Technologies，2007 年它又通过收购 Tonic Systems 收获幻灯片制作软件。这样一来，微软办公软件里面最重要的“三件套”Word、Excel、PowerPoint 的替代产品，谷歌都具备了。谷歌在整合了这三家公司的产品后，又经历了长达三年的 Beta 测试，最终于 2010 年正式推出了名字叫作 Google Docs 的办公软件套餐。
+
+Google Docs 是包括了文字处理软件、电子表格和幻灯片的云服务，这里并不是传统意义上的软件，用户无需在本地安装任何东西，而是通过浏览器访问对应的网址就可以使用这些云服务了。从这个意义上来说，Google Docs 和微软的 Office 有本质的不同。前者是基于浏览器的云服务，后者是需要本地安装的软件。
+
+**Google Docs 这款软件有两个很有特色的创新。**
+
+- **第一，它是基于浏览器的云服务，而不是传统意义上的软件。** 这使得用户可以把资料保存在网上，随时随地通过不同的设备接入，进行编辑。
+- **第二，它支持网络协同办公。** 多个人可以同时更改一个文档，互相之间都能看到对方的改动。
+
+这两大特色，让 Google Docs 一经推出就大受追捧。媒体们也纷纷表示，云服务是未来。
+
+**同时代的微软，日子过得则有点惨淡**：在搜索领域，必应搜索引擎做得一塌糊涂；在社交领域，MSN Messenger、Space 等社交软件做砸了；在移动互联网领域，Windows Phone 也被苹果和安卓打得找不着北。
+
+这时，微软最牢固的根基：办公软件领域，突然被谷歌杀了进来。入场方式还是极为吸引眼球、颇具杀伤力的云服务方式。那种随时随地可以和其他人一起编辑同一个文档的感觉，让大家都觉得微软本地安装 Office 的方式很落伍。
+
+此时，无论是外部，还是微软内部，都觉得云服务才是未来。于是，微软秘密组建了一个叫作 Office 365 的部门。这个部门刚成立的时候，有两大任务，分别对应于 Google Docs 的两大创新点：
+
+- 第一，如何在浏览器里面实现对 Office 文档的编辑，包括 Word、Excel、PowerPoint；
+- 第二，如何实现多人协同编辑同一个文档的功能。
+
+Office 365 的研发部门意识到，如果要实现这两大功能，需要对 Office 的整个软件架构做一个大手术。简单来说，需要把 Office 软件的 UI 层，和实现 UI 对应的功能层分离开来。这样一来，Office 365 的团队就可以在浏览器里通过复用底层的功能模块，用 JavaScript 重新实现 UI。
+
+与此同时，Office 365 的研发部门还亟需实现一个网盘。因为只有能够把文件存在网盘上，才有可能做到让用户随时随地、通过不同的设备来编辑同一份文件。这个网盘最初叫作 SkyDrive，但是因为已经被别人注册了商标，后来只能改名为 OneDrive。
+
+有了和 UI 分离的底层模块的复用，有了重新实现的 UI，有了网盘，微软的 Office 终于可以在浏览器里进行编辑了。后来，协同编辑的功能也被加了进来。微软的办公软件终于在功能上可以和谷歌媲美了。
+
+伴随功能的扩张，Office 365 的队伍也迅速扩充。到后期，Office 的高层意识到没有必要分传统 Office 和 Office 365，于是要求 Office 全体成员开发的任何一个功能，都需要同时支持本地的软件和基于浏览器的云服务。至此，Office 365 作为一个独立团队，完成了它的历史使命。
+
+很多人曾经盼望 Google Docs 和 Office 365 之间有一场剧烈的交锋，而谷歌会拿下办公软件市场的大量份额。然而，此事并没有发生，Google Docs 虽然来势汹汹，最终却没能够威胁到微软的统治地位。
+
+谷歌的软件虽然是云服务，但是其实现的功能却比较简单。尤其是电子表格软件，其功能和 Excel 基本没有可比性。这就导致了大量的企业级用户，无法从微软的办公软件切换到谷歌的办公软件。
+
+所以，谷歌虽然在云服务和多用户协同办公领域拔得头筹，却忘记了无论是云服务还是软件，用户最看重的还是其能够提供的功能。因为谷歌三件套的功能太过单薄，而微软又逐渐实现了谷歌三件套支持的云服务和协同办公，所以最终没有对微软造成实质性的伤害。
+
+但是，聪明的微软却利用这一次转型，做了一次收费模式的创新。原来的微软是平均每三年推出一个新版本的 Office 软件，通过卖新版软件来赚钱。这种赚钱方式不但辛苦，而且需要不断地创新。而伴随着 Office 软件越来越成熟，创新也越来越艰难。
+
+借助云服务模式，微软推出了 Office 365 服务，这个服务是按月收费的。有不同级别的套餐，每个月从几美元到几十美元不等。微软逐渐取消了用户购买软件的选项，所有使用微软 Office 的人，都逐渐地转型到了 Office 365，只能通过 office 365 订阅付费了。
+
+Office 365 的这种收费模式，大大增强了微软的盈利能力和盈利的稳定性，同时大大减少了微软开发新版本的迫切需求。微软高层曾经在接受采访时表示，用户和营收的增长，已经超过了他们的预期。
+
+谷歌作为一个竞争对手，给大家带来了耳目一新的云服务，却倒在了功能不够健全上。微软的 Office 部门，无愧于“微软最为强悍的部门”这一称呼，成功捍卫了自己在办公软件市场的统治地位，并借此转型成为云服务提供商，改变了自己的收费模式。
+
+只是谷歌这个敌人的出现说明：敌人往往会在你意想不到的地方出现。微软赢得了这次战斗，那么接下来另一个敌人到来，故事又会如何呢？
+
+
+
+
+
+# 异军突起的Slack
+
+2016 年 9 月，微软华人副总裁陆奇宣布因身体原因辞职。据说此前，他作为 Office 部门的负责人做出了一项决定：收购一个叫作 Slack 的公司。这项决定后来被微软的 CEO 萨提亚和创始人比尔 · 盖茨否决了。
+
+2016 年 11 月 2 号，微软宣布了功能上与 Slack 超级雷同的 Teams 应用，而同一天 Slack 则买下《纽约时报》的整版广告表示欢迎微软来 PK，他们有信心打赢这场战争。
+
+这两件事都指向了一个叫作 Slack 的公司和软件。Slack 到底是什么？陆奇想收购，陆奇离职以后微软又要大力推出类似软件。
+
+Slack，是这两年来企业办公市场里最火爆的软件；它也是微软数十年如一日努力战胜 Lotus Notes 以来，在企业协同软件市场遇到的最为强悍的竞争对手。今天我们就一起来看看 Slack 这个异军突起的公司。
+
+Slack 的 CEO 是斯图尔特 · 巴特菲尔德（Stewart Butterfield），这位老兄最擅长的事情是做游戏。不过了解他的人都知道，他两次创业做游戏都失败了，游戏的副产品却都成功了。
+
+第一次创业做游戏失败后，他发现游戏中的照片分享功能非常成功，于是将这个功能单独拿了出来，并命名为 Flickr，2005 年被有钱任性的雅虎出钱买下。作为收购的一部分，斯图尔特需要在雅虎工作一段时间，但按照他后来的说法，在雅虎工作实在是没什么意思，于是合同期满钱拿到手，他就离开了。
+
+离开后，斯图尔特再次选择创业做游戏。当年一起创业的小伙伴们，此时已经分散到天南海北，于是为了方便大家沟通，这些程序员们决定开发一款内部通信工具。这个工具可以实现存档、检索等各种功能，以至于他们之间的沟通再也不需要邮件了。
+
+但遗憾的是，这次开发的游戏依然失败了，所谓命运多舛，估计就是这个意思吧。按照之前做 Flickr 的经验，斯图尔特决定推广一下这个内部通信工具，并将其命名为 Slack。
+
+最初，他们几乎是连哄带求地说服了几家公司来试用，不过试用结果非常可喜，用户非常喜欢 Slack。2013 年 8 月，他们发布了 Slack 的测试版，之后用户便以每周 3% 到 5% 的速度开始增长。
+
+公司转向经营 Slack 以后，开始迅速发展。2014 年 2 月，Slack 正式上线，当天就有 8000 家公司注册。在当月，Slack 就以 2.5 亿美元的估值，获得了 4275 万美元的融资。更令人吃惊的是，同年 10 月 Slack 再次融资 1.2 亿美元，估值更是达到 11.2 亿。从内测到上线，短短一年时间 Slack 就成长为一个独角兽，这是绝无仅有的记录。
+
+Slack 为何如此火爆？在我看来，原因主要有以下几个。
+
+- **Slack 有着非常强大的内部沟通功能**，正好可以满足计算机和互联网行业从业人员的需求。
+- **Slack 有着非比寻常的搜索功能**。它支持在消息、文件、通知等项目内做跨类搜索，而且这种非常精准。
+- **Slack 自带一个机器人**。这是 Slack 的特色之一，它不但可以自动回答用户 Slack 的使用问题，而且还允许对特定企业的特殊需求进行开发和定制。Slackbot 无疑是 Slack 里非常亮眼的一个特色。
+- **Slack 有着非常强大的整合第三方应用的功能**。Slack 整合了现在流行的大部分应用，用户完全不用离开 Slack，就可以直接操作其他软件。比如，Slack 可以整合 Outlook，让用户在 Slack 内直接收发邮件。
+    **Slack 强大的应用整合功能，得益于它主推的应用商店 App Directory。**这个应用商店，类似苹果的 iTunes、App Store 和谷歌的 Google Play 应用商店。第三方通过 Slack 提供的 API 可以写 APP，实现自己的软件和 Slack 之间的整合。现在 Slack 对第三方应用的支持，很多都是由第三方调用 Slack 提供的 API 自己开发的。
+
+作为 Slack 的忠实用户，我必须说，它非常适合计算机和互联网行业的从业人员使用。无论是使用习惯、界面布置、第三方应用的整合，还是强大的搜索功能，它都在个人办公方面给我带来了无穷帮助。我可以拍着胸脯说，这是我见过的、最好用的团队沟通和协作软件了，没有“之一”。
+
+Slack 不断发展，它的估值也在不断升高。2016 年 4 月，Slack 完成了新一轮融资，估值达到 38 亿美元。当时，陆奇作为 Office 的最高负责人，看到这个软件如此强大的信息整合能力和如此迅猛的增长速度，想以 80 亿美元的价格收购。然而世事难料，收购计划并未落实，陆奇却很快离开微软。
+
+这前后的原因不得而知，但有一点是肯定的，Slack 的这种信息整合和搜索功能，对微软办公软件帝国的地位造成了威胁。传闻，比尔 · 盖茨想利用好刚刚收购的 Skype，将它发展成为微软在企业协同领域的王牌产品，与 Slack 进行竞争。
+
+果不其然，2016 年 11 月，微软发布了新的企业协同工具 Teams 的预览版，并于几个月后发布了正式版。遵照比尔 · 盖茨的意见，这个 Teams 是由原来 Skype 组的成员带头开发的。很明显， **Teams 模仿了 Slack，就是冲着 Slack 去的。**
+
+截至 2017 年，Slack 在企业协同领域，已经取得了丰厚的成绩，全球日活跃用户超过 500 万。尤其在中小型企业里，Slack 更是首选。
+
+虽然，现在 Teams 有着各种各样的问题，比如软件跑得很慢、能够连接的第三方应用很少等等，但是我们知道，微软在企业办公领域基本上是“屡战屡败，屡败屡战”，而且最后在不管多么艰难的环境下，都取得了最后的胜利。那么，面对这个一次又一次取得胜利的微软，Slack 真的准备好了吗？
 
 
 
@@ -492,6 +591,89 @@ Ribbon 的推出，给 Office 制造了一个非常大的热点。这是微软 O
 
 
 
+
+
+# 办公软件战斗的启示：内忧总是强于外患
+
+今天来看，微软作为办公软件领域的霸主当之无愧，它的 Office 系列是事实上的业内标准。但是办公软件的发展历史告诉我们，故事的开始并不是这样的。相反，无论是在字处理软件市场，还是在电子表格市场，微软不但不是初创者，而且在很长一段时间里，都有其他公司与其分庭抗礼，甚至比它强得多。
+
+那么，为什么这些公司一个接一个地倒下了，微软却成了最后的霸主呢？是微软战斗力特别强吗？是这些企业的产品不行吗？
+
+都不是。办公软件的战斗史告诉我们：这些公司大都死于内忧；而微软“屡战屡败，屡败屡战”，却几乎没有出现过内部问题。
+
+内忧往往比外患更可怕。这个道理看似浅显易懂，但很多公司都败在内忧的问题上。在办公软件的发展历程里，你还记得有多少公司是因为这样的问题倒下的么？如果再扩展到办公软件之外的企业，这个比例又将是多高呢？
+
+**说到内忧在企业中的表现形式，主要有以下两种。**
+
+**第一种是内斗**。有些企业还没有站稳脚跟就开始内斗，MicroPro 公司的 WordStar 就是一个非常典型的例子。因为内斗，MicroPro 不同版本的 WordStar 开始互掐，甚至在用户面前都不能做到自圆其说。很难想象一个出道最早、占有率很高的软件，到最后被自己玩死了；而公司的创始人们，面对被自己窝里斗搞死的企业，又是一种什么样的心情呢？
+
+企业发展过程中，这种内斗其实非常常见。举个例子，Twitter 四位创始人之间的内斗，就是硅谷近年来广受关注的事情。CEO 换了好几轮，Twitter 却依然不死不活。最近几年杰克 · 多西（Jack Dorsey）成了 CEO，没了新的内斗，Twitter 才渐渐趋向稳定，终于开始盈利。
+
+这里需要注意的是，我所说的是关系到公司生死存亡的、空耗型的恶性内斗。如果一个公司内部有多个团体做同一个产品，互相 PK，那就不一定是坏事。事实上，很多成功的企业，尤其是“家大业大不缺钱”的主儿，往往在某些技术方向上，让企业内部不同的部门做类似的产品，并在最后进行优胜劣汰。
+
+这在我看来是很有成效的一种做法。毕竟通过竞争，选择最合适的解决方案，往往会给公司提供最好的软件。但是很多时候内部竞争的发生和发展，并不一定可以控制在一定范围内。如果内部竞争的发生和发展到了足以影响公司经营的地步，那就非常危险了。一不小心，可能会搭上整个公司的前途。
+
+**第二种内忧可能更常见，那就是不思进取，不懂得居安思危。** 有些企业在确立了垄断地位后，觉得自己一家独大就不需要担心未来了；有些企业，还没来得及确立垄断地位，就开始“休息”了。做企业，尤其是互联网行业的企业，属于高风险的事情，稍微在功劳簿上打个滚儿，可能回头就不知道被哪来的对手掀翻了。
+
+居安思危是件很不容易的事情，对人、对企业来说都是。比尔 · 盖茨曾说，微软离破产永远只有 18 个月。可能这就是他在任期间，微软从来没有不思进取的原因吧。纵观办公软件的发展历史，无论是取得了成绩，还是遭受了挫折，微软一直都在前进。所以，最后微软活了下来，更多的同类企业却死得差不多了。
+
+WordPerfect 就是不懂得居安思危的典型，所以当操作系统进入图形界面时代后，它很快就被淘汰了。有人说，这是因为微软的操作系统 Windows 是自己开发的，有先发优势。然而在我看来，这个说法是不成立的。因为，微软在自己的 Windows 操作系统还没成熟的时候，就在给苹果开发 Excel。WordPerfect 如果想转型到图形界面的话，有足够的时间去开发新版本。
+
+再比如，Novell 是 DOS 时代著名的网络操作系统。在当时可谓：在个人计算机上，单机靠 DOS，联网则用 Novell。但是，伴随着从 DOS 到 Windows 的飞跃，Windows NT 服务器自带网络，并且有更好用的图形界面，Novell 就自然而然地消亡了。
+
+当然，Novell 并不是没有采取过自救行为。比如，Novell 后来买下了 WordPerfect，试图在办公领域和微软竞争。但是没过多久就发现这条路行不通，又把 WordPerfect 给卖掉了。总结原因，Novell 大部分时间沉迷于 DOS 时代的霸主地位，忽视了潜在的危机，等变革真正到来的时候，就理所当然地被革了命。**从这里可以看出，居安思危是一个企业持续成功必须具备的素质。**
+
+**那么，如何避免内斗，又如何做到居安思危呢？** 这个答案价值 10 亿。我想历史上很多人回答过，也有很多种答案，但是每个人的看法不同，这些答案也是“仁者见仁，智者见智”。
+
+我在这里推荐一个“良方”：亚马逊领导力准则。亚马逊是一个很有活力的公司，它的很多条领导力准则都对保持企业的活力和发展、防止内斗和不思进取有莫大的帮助。这个专栏里，我也通过系列文章陆续分析讲述了这些领导力准则。
+
+比如“要有硬骨头”，这条领导力准则说的是，讨论意见的时候大家可以畅所欲言，在做出决定以后所有人都遵循这个决定；事情做完之后无论成败，都不会秋后算账赖到某个人身上。这个原则就可以有效地防止企业内部发生剧烈斗争。
+
+
+
+
+
+
+
+# 办公软件战斗的启示：敌人的出现常常出其不意
+
+微软在奠定了办公软件行业的霸主地位之后，很长一段时间里都不再有可以对其构成威胁的对手。这也许是它在办公软件领域耕耘太久，认识更为深刻，也许是它的软件成为了这一领域内事实上的标准。
+
+谷歌这一竞争对手的出现似乎有些出人意料，它是从互联网办公的角度展开攻势的。谷歌出品的 Google Docs，只需要一个浏览器就可以使用，而不需要安装客户端。这种新型的办公和协作方式显然让微软很懵，微软实在是没有料到敌人会从这个角度出招。
+
+好在谷歌虽然对互联网的理解很深刻，但是对办公软件的理解还是过于浅薄。虽然 Google Docs 的新型办公和协作方式吸引了不少眼球，但是因为功能过于简单而未能满足用户的需求。
+
+很快，微软就开始有模有样地学起了谷歌，搞起了 Office 365。Office 365 里面很多的功能，比如说浏览器可以打开 Word 文档、可以直接多人协同编辑等等，说白了都是效仿谷歌的。只不过微软后来做得还不错，而谷歌在办公软件功能本身的提升上却没什么进展，所以微软顺利度过了这次危机。
+
+Slack 的出现估计更是大大出乎微软的意料。这个协同办公软件迅速占领了很多中小型企业市场，大家不再需要零散的 Email 或者在线消息沟通方式，取而代之的则是频道的概念。
+
+Slack 的“频道”类似于常见的聊天室，一个频道就是一个聊天室，相关人员都可以加入，所以做同一件事的人可以集中在一个频道里面协同办公。
+
+对于这个新出现的竞品，微软也只能模仿，做了个雷同的 Teams 应用。至于结果鹿死谁手，现在还很难预料。
+
+办公软件的战斗告诉我们，敌人的出现，不一定在同一个领域，有时候一个领域、一个产品被颠覆，甚至可能是看起来毫不相关的产品。例如，相机领域颇有建树的尼康最终关闭中国公司， 主要就是因为智能手机的兴起，这就和相机本身关系不大了。
+
+同样的故事也发生在 GPS 厂商那里。曾几何时，GPS 厂商风光无限。无论是 TomTom 还是 Garmin，在北美市场都占据了极为重要的地位。只是自从有了智能手机和谷歌这样的公司以后，智能手机实时更新的地图和导航，就迅速取代了 GPS。实时导航结合离线地图几乎无所不能，既有传统 GPS 的优点，又可以随时更新交通状况，实时计算最佳路径。这显然是传统 GPS 厂商想都想不到的事情。但是当它发生了，GPS 厂商倒闭了。
+
+**如果说这些变革看起来多少还有那么一点关系的话，那么最近口香糖厂商的日子不好过，竟是因为智能手机出现后大家开始沉迷于手机 APP，这可能更让人吃惊。** 以前大家排队无聊的时候，总会嚼块儿口香糖打发时间，很长一段时间里都如此。然而，智能手机的出现，以及随之而来的各种 APP, 使排队变得不再无聊。
+
+大家拿出手机看看微信、刷刷朋友圈，或者玩几把王者荣耀，消磨时间的方式更加先进有趣，更加让人沉溺其中。于是，无聊嚼块儿口香糖这件事情，就显得不那么重要了。那么，这次口香糖厂商的日子不好过，是不是腾讯公司也算背后推手呢？
+
+前段时间我看到一条新闻，说杭州的治安比前些年好多了，小偷几乎不见了。因为智能手机的出现，移动支付开始普及，在杭州只要智能手机在手，消费几乎都可以用无现金的方式通过移动支付完成。小偷们还可以继续偷手机，但是却没有现金可偷了。而手机销赃相对于窃取现金来说更加困难，所以愿意通过偷手机销赃赚钱的小偷还是少数。这样一来，小偷少了很多。估计他们自己，也没有想到竟会这样失业吧？
+
+这样的故事还有很多，但主旨都是一样的。人类社会发展到今天，很多时候一个行业、一个领域的变革，一个竞品的出现，都可能源自一个意想不到的角度。真正的敌人常常出其不意，所以在正面防守的时候，不要忘了“马奇诺防线”的故事，不要让敌人绕到背后占领根据地才好。
+
+面对这样的情况，企业的生存难度无疑大了很多。所以，一个已经占据行业优势地位的企业，也应该时刻居安思危，不断拓展新领域。可以看到，大型互联网公司，除了在自己最擅长的领域里面做得非常出色，无不在非常努力地进行全方位拓展。
+
+当然，这种全方位拓展带来的往往是大概率的失败。可即便如此，这些公司依旧毫不犹豫投入大量资金去拓展业务。只有不断尝试，才有可能抵御住不知会从哪儿冒出来的危机。这种方式是否高效尚不得而知，但目前看起来创新、全方位地创新，的确是面对不确定性最有效的方式。
+
+此外，大公司还有其他两种常见的应对策略：收购有威胁的公司，或者仿造有威胁的产品。这两种策略，不同的公司在不同的情景下都实施过。当初陆奇还在微软的时候，就打算收购 Slack，不过据说这个计划被比尔 · 盖茨和萨提亚否决了，随后微软就开始模仿 Slack 做起了 Teams。
+
+大公司之所以可以这样做，一方面是雄厚的资金支持，另外一方面是可以迅速调集很多资源。从后者来说，对市场的迅速反应能力非常关键，而目前在这方面做得最好的当属亚马逊了。
+
+大公司面对不知将来自何处的威胁，基本上也就只有这些办法了。但换个角度看，这也侧面反应出，相对于 10 多年前的传统软件行业的发展，近些年兴起的互联网行业的变革实在是太快了。APP 层出不穷，商业模式不断推陈出新。尽管有所谓的垄断，小公司乃至创业公司，也完全有从对手难以想象的角度去颠覆其垄断地位的可能性。
+
+换句话说，小公司的机会是无穷无尽的。所以，找到合适的方式，是小公司成功的关键。每个行业都有可能被颠覆，每个垄断者的地位都可能被不知来自什么方向的对手撼动，如此精彩的行业和如此丰富的机会，也是每个互联网行业创业者的有利条件。
 
 
 
