--- a/2-技术与商业案例/8-亚马逊领导力准则.md
+++ b/2-技术与商业案例/8-亚马逊领导力准则.md
@@ -633,21 +633,208 @@ Bar Raiser 的一票否决制度，也决定了很多时候 Bar Raiser 会和招
 
 
 
+# 亚马逊领导力准则之远见卓识
+
+用亚马逊创始人贝佐斯自己的话形容，亚马逊领导力准则是这家公司取得如此辉煌成就的基石。认真学习这些领导力准则，不但有助于理解亚马逊的企业文化，也可以帮助我们分析亚马逊如何取得了这样举世瞩目的成就。
+
+今天我要说的一条亚马逊领导力准则是“远见卓识”，其中文官网解释为：
+
+> 局限性思考只能带来局限性的结果。领导者大胆提出并阐明大局策略，由此激发良好的成果。他们从不同角度考虑问题，并广泛寻找服务客户的方式。
+
+这条领导力原则主要关注领导者的思维方式。贝佐斯要求领导者不拘泥于局限性的思考，要保持脑洞大开的状态。领导者可以从不同的角度去思考问题，发现别人不能发现的，想到别人不能想到的。这种远见对于一家公司的成长来说非常重要。
+
+早在 2004 年，贝佐斯就开始思索一个问题：随着亚马逊业务的扩张，哪些企业会成为亚马逊最可怕的竞争对手？
+
+请注意，这里使用了“最可怕的竞争对手”这样的表述，说明“普通的竞争对手”并不在贝佐斯思考范畴之内。这个问题在贝佐斯的脑子里徘徊许久，以至于他开始组织会议讨论这个问题。
+
+当贝佐斯和他著名的 S-team 讨论竞争对手问题时，首先出现在讨论名单中的主要是包括 BestBuy、Target 在内的电商，当然也包括全球最大的连锁超市沃尔玛这样的传统零售企业。
+
+这是大多数人的第一反应，S-team 的人也不能免俗。然而在贝佐斯看来，这都属于局限性的思考。道理很简单，这种竞争对手，连一个亚马逊普通员工都能想到，作为杰出的领导层，其实根本不需要去关注。
+
+贝佐斯认为，这些所谓的竞争对手，哪怕是最牛的沃尔玛，其实都会被亚马逊扫进历史的故纸堆里。毕竟传统的厂商们并不知道如何高效地进行经营和买卖，亚马逊的电商服务才代表了未来。
+
+这样来讲，如果亚马逊最大的竞争对手还是他们，这不只是对自己缺乏信心，而是杞人忧天了。这显然不符合贝佐斯对亚马逊高管的要求，毕竟他对管理层要求非常严苛，肯定不会满足于只提供这类应答的领导者。贝佐斯对于 S-team 提出的竞争对手表示了不满，这不是他想要的答案。
+
+这时，S-team 中有人“脑洞大开”地提出了一家公司：谷歌。为什么说是“脑洞大开”呢？因为在 2004 年的时候，谷歌还远非如今这样知名。它作为一个搜索引擎提供商，虽然有全球最厉害的搜索引擎技术，但却一直专注于搜索引擎领域。
+
+没有上市，又没有那么多钱，无论从什么角度来看，谷歌和亚马逊的电商都没有太多联系。如果一定要说有，谷歌和亚马逊更像是互补的关系，一个厉害的搜索引擎给亚马逊的用户提供了方便之门。正常的逻辑来说，这家企业其实有益无害。
+
+S-team 中的其他人望着提出想法的人一头雾水。只有贝佐斯像发现新大陆一样，让这个“脑洞大开”的领导者详细阐述他的看法。
+
+这个人的看法大致上有这么几点。
+
+- 首先，搜索这个东西天然就具备了门户的特点，如果用户都使用谷歌去搜索要购买的产品，那么谷歌的导流作用就可以对亚马逊的业务产生实质的威胁。
+- 其次，谷歌在搜索的过程里面，掌握了大量的用户数据，这些数据足以让谷歌有效分析出亚马逊至关重要的商业机密。
+- 最后，谷歌作为需要给全球互联网提供搜索服务的公司，大规模计算和分析的能力非常强，所有的这些东西既为谷歌直接进入电商市场，提供了非常坚实的基础，又为谷歌给其他传统企业和电商提供增值服务，提供了非常有效的资源。也就是说，被谷歌技术武装起来的传统厂商们的杀伤力将不可忽略。若一时不慎, 亚马逊的根基都会被掀翻。
+
+至于谷歌会不会拿着这些技术和信息，自己进入电商市场，或者和其他企业结合，帮助其他企业一起发展业务对抗亚马逊呢？
+
+这个问题其实很容易回答，谷歌的技术表明了这家公司的优秀水平，谷歌的扩展空间表明了谷歌一定会全方位出击，某天谷歌和亚马逊很可能会短兵相接。如果亚马逊不做好防范，对谷歌潜在的威胁视而不见，等到威胁真的发生时，在亚马逊购物的人已经严重依赖于谷歌的搜索功能了，亚马逊就很难有反抗之力，这显然会危及亚马逊的发展。
+
+贝佐斯非常赞同这个“脑洞大开”的想法，尽管谷歌在当时看来那么人畜无害，它的搜索引擎又如此好用，帮助亚马逊获得了大量客户。但贝佐斯觉得，亚马逊网站对于谷歌的依赖性已经开始出现了，而有了这种依赖性，天知道会发生什么事情。于是，防范谷歌的威胁，减少亚马逊客户对谷歌的依赖，就成为了这次会议的决策。
+
+在这个决策的基础上, 亚马逊开展了一项脱离谷歌的计划，这项计划的筹备长达数年。
+
+- **首先，亚马逊在它们的全资子公司 A9 上花了大价钱，A9 的主要任务就是做亚马逊网站上商品的搜索和广告技术。** 如果用户能够在亚马逊网站上方便地搜索想要的商品，就用不着额外使用搜索引擎了，所以提高自己网站的搜索能力是非常重要的一步。
+
+- **此外，亚马逊同时采取技术手段，避免搜索引擎随意抓取自己网站上的数据。** 这样一来，谷歌这样的搜索引擎，就无法通过抓取为用户提供商品的精准数据，这也就杜绝了谷歌给亚马逊提供搜索的可能。
+
+    亚马逊觉得自己网站上商品的信息，有着重要的商业价值，如果搜索引擎可以随意获取到数据的话，无疑是把自己非常有价值的东西拱手送人，对于自家的长远发展是非常不利的。
+
+贝佐斯曾在内部将此事作为脑洞大开的例子提及。他认为，一个管理者只在舒适区内思考问题是不够的，管理者不应该局限自己的思维方式、角度和层次。
+
+**只有眼界足够开阔的管理者，才可能从不同的角度去思考问题，从而为公司的发展提供正确的决策和独特的竞争力。**
+
+这一点对于管理者的要求无疑非常高，因为每个人的思维都有局限性。能够脑洞大开走出思维局限的人，某种程度上不仅是一个管理者，更是具备很强创新能力的人，这在很多时候是种天分。
+
+在我看来，这个世界上只有一个乔布斯，只有一个通过发明手机改变全世界的人，也只有一个苹果公司。
+
+亚马逊要求领导者做到这些，却没有说明如何才可以做到。这也表露出贝佐斯的用人原则：我告诉你亚马逊需要什么样的人，如果你是，欢迎加入；如果你不是，无论是天资所限还是努力不够，那么也只能是无缘了。
+
+这条领导力准则所提出的要求非常之高，并非是靠努力就能达到的。这也侧面反映了满足亚马逊领导力准则的不易。
 
 
 
 
 
+# 亚马逊领导力准则之好奇求知与赢得信任
+
+用亚马逊创始人贝佐斯自己的话形容，亚马逊领导力准则是这家公司取得如此辉煌成就的基石。认真学习这些领导力准则，不但有助于理解亚马逊的企业文化，也可以帮助我们分析亚马逊如何取得了这样举世瞩目的成就。
+
+## 一、好奇求知
+
+我在前面已经讲解了 10 个领导力准则，剩下的 4 个相对好理解一些，我分两篇文章来讲解，每篇讲两个。今天讲的第一个领导力准则是“好奇求知”，其中文官网解释为：
+
+> 领导者从不停止学习，并不断寻找机会以提升自己。领导者对各种可能性充满好奇并付于行动加以探索。
+
+我们大致上可以这样来理解这条领导力准则：
+
+1. 持续学习，不断提升；
+2. 对各种可能性都保持好奇心并且付诸行动。
+
+贝佐斯强调领导者要保持学习习惯，他自己就经常以身作则，不断进入新的领域展开新的业务。持续学习不仅是领导者的必备技能，从提高个人能力和素质的角度来说，它和不断提升一样也是每个人都应有的状态。
+
+但是，持续学习作为一条对所有人都大有裨益的通用准则，在互联网公司里面尤为重要。互联网行业的技术和业务发展日新月异，你必须持续学习才能够跟上行业的发展，这对于每个互联网人都是一样的。以我个人经验来看，很多东西我不去接触，过个三五年就改头换面了，老旧的知识完全跟不上时代的需求。
+
+“好奇求知”的第二部分又可以从两个方面来看，首先是充满好奇心，其次是要付诸行动。这就和其他亚马逊领导力准则相呼应了，比如说亚马逊要求领导者能够全方位、多角度地思考问题，从而做出决策，再比如亚马逊是一个崇尚行动高于讨论的公司，这两点在这条领导力准则上都有反映。
+
+为什么行动比较重要？关于这一点，“崇尚行动”这条领导力准则可以给出启示。简单回顾一下，贝佐斯认为速度很重要，任何决定和行为，哪怕是不正确的，只要有速度，快速试错，是可以迅速纠正的。所以说，与其浪费时间细化决策，不如果断采取行动，这一点我觉得非常有道理。
+
+充满好奇心又是对行动力的补充，它使领导者并不只专注于目前行动的某一种可能性，而是对其他事项都保持热情和求知的态度。两者共同组成了贝佐斯对“好奇求知”的完整认识。
+
+此外，“创新简化”这条准则，其实也是和充满好奇心相呼应的：创新离不开好奇心，只有保持好奇心才能够始终保持创新精神。
+
+亚马逊领导力准则是一个统一的整体，组成部分间此唱彼和、相得益彰。一条准则里经常可以连带出其他准则的内容，所以我们不应该孤立地解读。
+
+“好奇求知”要求领导者不断对外部世界进行探索，学习外在的知识，充实自己并付诸行动。但这还不够，亚马逊领导力准则中的“赢得信任”，还要求大家通过“批评和自我批评”来不断反思自身以及他人已经采取的行动，反省内在，自我提高。
+
+## 二、赢得信任
+
+今天要讲的第二个领导力准则就是“赢得信任”，其中文官网解释为：
+
+> 领导者专注倾听，坦诚沟通，尊重他人。领导者敢于自我批评，即便这样做会令自己尴尬或难堪。他们并不认为自己或其团队总是对的。领导者会以最佳领导者和团队为标准来要求自己及其团队。
+
+这条领导力准则可以解读为三点内容：
+
+1. 领导者能够倾听，坦诚沟通以及尊重他人；
+2. 领导者善于自我批评；
+3. 领导者对于自己和团队都要有高要求。
+
+**“赢得信任”这条准则的第一部分主要是沟通的态度和方式，“倾听”是很重要的一部分。** 贝佐斯非常痛恨办公室政治，他有次开会时提到，每次站在自己的办公室窗口，望着隔湖相对的微软就在想：当自己的公司壮大了，绝不能成为湖对岸那个政治气氛浓厚的公司。
+
+他理想的状态是：公司的每个人都是领导者，每个人都能够倾听别人，坦诚沟通，并尊重其他人的见解。只有这样状态下的公司，才是高效率、低内耗的，才能够实现更好的发展。
+
+达到这种理想状态非常不易。但是，贝佐斯觉得人和人之间的信任非常重要，没有了信任，公司就容易滋生小团体，就会因为人员各怀鬼胎而分崩离析。微软在从一个小软件公司成长为全球最大软件公司的过程中，小团体的内斗已经上演了。贝佐斯肯定是对这种文化十分了解，所以才会多次极力表示，他所创立的企业，不应该存在这种病态。
+
+而具体到领导者，要赢得他人信任并学会坦诚和尊重十分必要，要能听进别人的意见。这在贝佐斯的谈话中反复被强调。
+
+**第二部分是“自我批评”。** 中华文化的传统美德里比较强调自我批评，这些东西对于我们来说可能是习以为常了，但西方社会更强调个人价值的实现。所以如果在美国待久了，一个人往往会呈现出一种“自我表扬”的状态，我在微软工作时对此就感觉十分明显。
+
+在职场上印度人非常成功，其中一个原因也是他们比较擅长自我表扬。在美国职场上，奖励自我表扬，而不奖励自我批评是常态。贝佐斯会把自我批评放进领导力准则，这一点实在出人意料。
+
+不过，仔细想来，贝佐斯的做法也在情理之中。一个擅长自我表扬的环境坏处是很明显的，每个人都在讲述自己的功绩，展现自己的成就，没有人去审视自己做的事情，反省自己做得是否合适。
+
+这样一来，企业难免会浮躁，管理层也很容易变得张扬。这种问题不仅仅在初创企业中出现，在大企业中也同样存在。谷歌上市之后就有一段时间自我膨胀，妄图在各个领域同时出击，以至于后来全方位败退以后，才开始考虑自己到底擅长什么。这说明即便是优秀的企业，如果失去了自我反省能力，也是非常可怕的。
+
+在西方思维的大环境下，贝佐斯依然将“自我批评”这点写进企业的领导力准则，实在值得敬佩，这说明贝佐斯对于西方传统文化里的弊端有着深刻的思考和见解。这些领导力准则造就了亚马逊，使它有别于很多典型的西方企业。从某种程度上来讲，亚马逊在很多方面的成功，确实是很多西方企业所没有达到的。
+
+**第三部分，其实是对其他领导力准则的重复了。简单来说，导者对自己也好对团队也罢，都应该执行最严格的标准，这一点在亚马逊得到了全方位的体现。** 作为领导者，严格要求自己和团队，也是必不可少的基础内容。试想，若无法以最严格的标准去要求自己和团队，一个领导者怎么才能获得工作伙伴的信任呢？
+
+“赢得信任”要求你学会倾听与沟通，要在自我批评和自我审视中寻求改进的可能性，并通过严要求获得同事、下属以及上级的信任。
+
+总结来说，领导者需要有“好奇求知”的精神，和“赢得信任”的能力，他需要不断探索外部世界，不断学习提高并能够付诸行动，在“批评与自我批评”中不断反思和完善自己。
+
+亲爱的读者，如果你是一位领导者，你是怎么做的呢？关于领导者应该具备的个人素质，你有没有想和大家分享的故事？欢迎留言探讨。
 
 
 
+#  亚马逊领导力准则之刨根问底与达成业绩
 
+用亚马逊创始人贝佐斯自己的话形容，亚马逊领导力准则是这家公司取得如此辉煌成就的基石。认真学习这些领导力准则，不但有助于理解亚马逊的企业文化，也可以帮助我们分析亚马逊如何取得了这样举世瞩目的成就。
 
+这篇文章是亚马逊领导力准则系列文章的最后一篇，我来讲最后两个领导力准则：“刨根问底”和“达成业绩”。
 
+## 一、刨根问底
 
+今天讲的第一个领导力准则是“刨根问底”，其中文官网解释为：
 
+> 领导者深入各个环节，随时掌控细节，经常进行审核，当数据与传闻不一致时持有怀疑态度。领导者不会遗漏任何工作。
 
+“刨根问底”这条准则可以从 3 个方面来理解：
 
+1. 领导者能够深入各个环节，掌握细节；
+2. 领导者经常进行审核，数据和传闻不一致时要有怀疑态度；
+3. 领导者不会遗漏任何工作。
 
+**首先是领导者能够做到深入各个环节并掌握细节，这一点字面上不是很难理解。掌握细节让领导者看问题不会浮于表面，而是能够深入下去。**
 
+在微软、 IBM 这样的大企业，一名员工一旦成为经理，往往只注重高层面上的东西而不愿深入细节。主要原因有两个，其一是他们距离细节比较遥远，其二是他的上级乃至更上级的领导只需要看到宏观的东西。所以深入细节对于他来说，没有实际的奖赏。但是，这对领导者管理公司却未必是好事。
+
+关于这一点，贝佐斯给大家树立了一个很好的榜样。在亚马逊，每时每刻都发生着各种事件，比如网站运行慢了，再比如某个功能无法使用了等等。只要是与公司相关的事情，贝佐斯总是事必躬亲地参与进来。比如，他本人经常会出人意料，随机进入一个在开的会议，或是亲自给人发邮件汇报或解释事情等等。
+
+很多人会奇怪了，贝佐斯是怎么知道这么多事情的？从公开的渠道来看，主要有两方面原因。
+
+- 一方面是，公司内部大大小小的邮件列表，贝佐斯都在里面。贝佐斯喜欢时不时地随机查看某个邮件组里的邮件。
+- 另外一方面是，公司内部给贝佐斯写 Email 的渠道很畅通，贝佐斯（或者其秘书）总能在最短的时间内，知道公司内部发生的大大小小的异常事件。
+
+贝佐斯在很多场合都强调过，领导者不应只限于大局。无论是处于什么位置的领导者，都需要有深入细节、随时掌控各个环节的能力。只有这样，公司才能够良好运作。
+
+**这条准则的第二部分是对审核的严要求。** 要知道，亚马逊内部完全数据化了，具体到打开网站需要多少时间，直至每个功能最多允许出现多少错误等等，量化的体系使亚马逊非常依赖数据去做决策。使用数据来做决策本身不是坏事，这起码好过拍脑门儿做决策的工作方式。然而用数据做决策，很多时候也会出现偏差。
+
+数据出错的原因有很多，但无论是数据本身出错，还是说实际状态才是错误的，只要最终数据结果与实际状态不符，领导者就需要彻查。在亚马逊这样的状况经常出现，这就需要领导者时刻保持警觉状态。
+
+因此，可以说对任何事物都保持谨慎和怀疑的态度，是领导力准则很重要的一点。
+
+**关于这个领导力准则的最后一部分，即“不会遗漏任何工作”，与之前提及的“最高标准”其实是一脉相承的。** 一个领导者应该面面俱到，不遗漏任何东西，这其实是以极其严苛的、常人看来不可思议的标准去要求自己和团队的结果。
+
+亚马逊领导力准则里除了提出领导者要深入细节，不遗漏任何工作的要求，也强调工作时要能抓住工作的关键决定条件，并以最终完成工作、达成业绩作为判断工作好坏的指标。深入细节，绝非眉毛胡子一把抓。
+
+## 二、达成业绩
+
+今天要说的第二个领导力准则“达成业绩”，恰好反映了亚马逊对领导者在这方面的要求。“达成业绩”的中文官网解释为：
+
+> 领导者会关注其业务的关键决定条件，确保工作质量并及时完成。尽管遭受挫折，领导者依然勇于面对挑战，从不气馁。
+
+从字面意思来理解其实非常容易，“达成业绩”简单来说就是最后把东西做出来，有一丝“以结果论英雄”的意味。做企业不是请客吃饭，最终是要为股东创造利润的。所以在亚马逊领导力准则里，最后一条就是强调任何领导者都应达成业绩。
+
+**以“结果”来说明一个领导者到底是不是合格，这在何时何地都是毋庸置疑的硬指标。**
+
+贝佐斯在这一条准则中，不仅提出了要求，而且深入探讨了如何做到达成业绩。这包括两个方面：
+
+1. 关注业务的关键决定条件，确保工作质量并及时完成；
+2. 面对挫折不气馁。
+
+第一部分谈及了达成业绩的关键：工作质量和工作速度。掌握两者间的平衡，其实是一门很大的学问。但凡有过大项目开发经验的人都知道，要求质量了，速度不一定能上去，速度上去了，质量可能又会是问题。所以在不降低质量的前提下，更好地提高速度，是需要技巧和耐心的。贝佐斯能够指出质量和速度是业绩的关键，很有远见。
+
+在这一条领导力准则里，贝佐斯特意强调了要面对挫折不气馁，想来他在创建亚马逊，以及达成业绩的过程中必然遭遇了很多挫折，所以他才要将这一点写入领导力准则。当然，这只是我一家之言，并没有特别的证据支持。
+
+**虽然说，以成败论英雄不一定正确，但在企业行为来看“结果”一定非常重要。**
+
+或许你要问了，亚马逊强调做决策要为长远目标而服务，不能为短期利益牺牲长远的规划和利益，但同时却又强调需要有业绩，那么远期目标和近期业绩之间的平衡点到底在哪里呢？
+
+对此，亚马逊领导力准则并没有给出答案，贝佐斯也没有表述过他的看法。但是我想，领导力准则给出来的是纲领性的东西，而把纲领性的东西融会贯通，成为一个好的领导者，就需要看每个人的悟性和能力了。
+
+至于这种平衡点到底在哪里，也许具体到每个问题上会有所不同。而能否做好远期目标和近期业绩之间的平衡，这正是一个优秀的领导者和一个平庸的领导者的区别。
+
+亚马逊领导力准则这一系列，到今天就全部讲完了。它博大精深，而我个人的理解难免浅薄，我之所以会写作这个系列，一是希望传播一些伟大公司的管理理念，一是将其作为一个自我学习和不断进步的过程。这一套准则里面有很多关联和冲突，或许不是我能够一一理解和解答的，这个系列主要还是希望起到“领进门”的作用，希望我们一起领悟和不断精进。
 
