--- a/9-Self article/成长之路/12-做有价值的事.md
+++ b/9-Self article/成长之路/12-做有价值的事.md
@@ -78,9 +78,21 @@
 
 #### 问题二：研究生的生活到底需要怎么过？
 
-这个问题，是可以直接写一篇文章的，但是我只想就着我最近的感想，写一点**自己的见解**。
+这个问题，是可以直接写一篇文章的，但是我只想就着我最近的感想，写一点**自己的见解**。(谈到这里的时候，已经是本篇文章开始的24小时之后，也就说是这篇文章是我多次完成的。)
 
+现在回想，过去的一年多的时间里面，我其实做的最多的事就是，**做当时我的认知可以认为是最有价值的事**！尽管现在的我，并不觉得有些事是有价值的，但是当时我确实想了好久！
 
+从我此刻的状态去看研究生的生活，我会将其总结如下：
+
+1）**搞清楚自己为什么上研究生**，接着，你就会明白自己如何应对接下来的学业与工作。这一点很重要，我觉得现在的人，不太喜欢看到过程，只想要结果，这就属于**贪婪系列**！如果你是这种人，需要自己反省了哦o~
+
+2）早睡早起，有一个**好的生活习惯**。既然学习不行，既然找工作不满意，那么我希望你的生活值得你满意。你可以早起，你可以每天保持学习的状态，你可以不断地提升自己。这原本就是一件很难得事，但是你做到了！所以，你战胜了你的**懒惰**，很棒哦！
+
+3）**相信一分钱一分货**。这是天理，物超所值的概率事件太少太少，几乎不可能。如果你觉得某个东西很好，物美价廉，那么大概率你并不是真的清楚这个东西。比如双十一，你以为真的商业逻辑就是满减活动吗？所以，不要做一个**既贪婪又愚蠢**的人！
+
+4）**做一个影响身边人的人**。当然，人都是会不自觉的学习好的东西，所以，大可不必担心你的坏习惯影响了别人。如果，有一天你发现更多的人再走你曾经的路，那么你应该庆幸，你已经走在前列了，接着你会自主的要求自己变得优秀！从此，你会走上**告别愚蠢与懒惰**的道路。
+
+5）.......(自行脑补吧！)
 
 
 
@@ -96,7 +108,19 @@
 
 #### 问题三：为什么要做有价值的事吗？
 
-答案：你不做有价值的事，自己就不会被满足，自己就会迷失，自己就会开始犯傻！
+答案：你不做有价值的事，自己就不会被**满足**，自己就会**迷失**，自己就会开始**犯傻**！
+
+将自己的生活细化，最简单与暴力的方式及时：**量化时间**。
+
+时间的不断细分，必然具体到某一件事上会有对应的量值，将其**求解积分**就可以得到你的生活，当然取一个无穷大的积分，那么这就是你的**一生，即一辈子**。（如果当年老师这么教学生什么是积分，那么学生会真的记住老师**一辈子**的！）
+
+我想，积分学已经给你了想要的答案。积分的求解不仅仅是一个答案，更多的是如果积分出最大的面积(二维)。映射到生活，我觉得应该是**做最有价值的事，获得最优的解，得到最大的面积**。
+
+比如说，我今天就做了一件很有价值的事，那就是坐着高铁去公司。不说别的，就这件事，在国内，是没有多少人可以完成的，因为这个条件造就的，而我很幸运，竟然可以有这个条件。在我决定做这一件事的时候，我突然想清楚了好多事，也算是这一篇文章的起源吧！
+
+随着我将学业与工作合二为一的进程，我收获的太多了。都无法言表了！这条路的走通，对于我自己的收获是巨大的，对于我以后的决定也是决定性的，尤其是我可以给我弟弟很多经验，至少可以少走4年的弯路。(毕竟我走了四年的弯路)
+
+做有价值的事，其实并不为什么，这是没有原因。如果非要究其原因，那就是：你**不愚蠢，不贪婪，不懒惰！**我想这是一个很好的答案！
 
 
 
@@ -112,7 +136,7 @@
 
 ### 总结
 
-
+从愚蠢与贪婪与懒惰谈起，看了我的现阶段生活，并且总结了一些自己认为自己需要重视的内容。还给自己了一个判断事情的标准，即做有价值的事！
 
 
 
@@ -124,7 +148,11 @@
 
 ## 结束语
 
+感谢自己的坚持，真的，有太多次我自言自语说：“要不放弃吧！要不就这样吧！”
 
+但是，我也就是嘴上说说，并没有执行。依然该是什么都是硬着头皮往下干！但是，请你我都记住：**生活的选择权在自己的手上。**
+
+这篇文章写的很不容易，但是我也算是给自己了一个交代，感谢自己的不懒惰！
 
 
 
